# immigrationGPTv2

./: .gitignore  Analysis.ipynb  QUICK_START.md  README.md  Report-qna.md  Retrieval_Evaluation.py  agent_flow_diagram.md  architecture_diagram.md  detailed_results_20251020_184217.csv  env.template  evaluation_summary_20251020_184217.txt  golden_dataset_cache.csv  pyproject.toml  requirements.txt  start_all.bat  start_all.sh  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  vercel.json
backend/: immigration_agents_team.py  main.py  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  ClientOnly.tsx  MessageBubble.tsx  SettingsModal.tsx  TypingIndicator.tsx
frontend/src/services/: api.ts
frontend/src/store/: appStore.ts
frontend/src/styles/: globals.css
frontend/src/utils/: dateUtils.ts  storageUtils.ts
